train embeddings before adding cbow to maxent

--- a/cbow_preprocessing.ipynb
+++ b/cbow_preprocessing.ipynb
@@ -2,7 +2,94 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# source: https://www.daniweb.com/programming/software-development/code/216839/number-to-word-converter-python\n",
+    "def int2word(n):\n",
+    "    \"\"\"\n",
+    "    convert an integer number n into a string of english words\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # Return any string that is not all digits\n",
+    "    if not all([char.isdigit() for char in n]):\n",
+    "        return n\n",
+    "    \n",
+    "    # break the number into groups of 3 digits using slicing\n",
+    "    # each group representing hundred, thousand, million, billion, ...\n",
+    "    n3 = []\n",
+    "    r1 = \"\"\n",
+    "    # create numeric string\n",
+    "    ns = str(n)\n",
+    "    for k in range(3, 33, 3):\n",
+    "        r = ns[-k:]\n",
+    "        q = len(ns) - k\n",
+    "        # break if end of ns has been reached\n",
+    "        if q < -2:\n",
+    "            break\n",
+    "        else:\n",
+    "            if  q >= 0:\n",
+    "                n3.append(int(r[:3]))\n",
+    "            elif q >= -1:\n",
+    "                n3.append(int(r[:2]))\n",
+    "            elif q >= -2:\n",
+    "                n3.append(int(r[:1]))\n",
+    "        r1 = r\n",
+    "    \n",
+    "    #print n3  # test\n",
+    "    \n",
+    "    # break each group of 3 digits into\n",
+    "    # ones, tens/twenties, hundreds\n",
+    "    # and form a string\n",
+    "    nw = \"\"\n",
+    "    for i, x in enumerate(n3):\n",
+    "        b1 = x % 10\n",
+    "        b2 = (x % 100)//10\n",
+    "        b3 = (x % 1000)//100\n",
+    "        #print b1, b2, b3  # test\n",
+    "        if x == 0:\n",
+    "            continue  # skip\n",
+    "        else:\n",
+    "            t = thousands[i]\n",
+    "        if b2 == 0:\n",
+    "            nw = ones[b1] + t + nw\n",
+    "        elif b2 == 1:\n",
+    "            nw = tens[b1] + t + nw\n",
+    "        elif b2 > 1:\n",
+    "            nw = twenties[b2] + ones[b1] + t + nw\n",
+    "        if b3 > 0:\n",
+    "            nw = ones[b3] + \"hundred \" + nw\n",
+    "    return nw.strip().split()\n",
+    "\n",
+    "############# globals ################\n",
+    "ones = [\"\", \"one \",\"two \",\"three \",\"four \", \"five \",\n",
+    "    \"six \",\"seven \",\"eight \",\"nine \"]\n",
+    "tens = [\"ten \",\"eleven \",\"twelve \",\"thirteen \", \"fourteen \",\n",
+    "    \"fifteen \",\"sixteen \",\"seventeen \",\"eighteen \",\"nineteen \"]\n",
+    "twenties = [\"\",\"\",\"twenty \",\"thirty \",\"forty \",\n",
+    "    \"fifty \",\"sixty \",\"seventy \",\"eighty \",\"ninety \"]\n",
+    "thousands = [\"\",\"thousand \",\"million \", \"billion \", \"trillion \",\n",
+    "    \"quadrillion \", \"quintillion \", \"sextillion \", \"septillion \",\"octillion \",\n",
+    "    \"nonillion \", \"decillion \", \"undecillion \", \"duodecillion \", \"tredecillion \",\n",
+    "    \"quattuordecillion \", \"quindecillion\", \"sexdecillion \", \"septendecillion \", \n",
+    "    \"octodecillion \", \"novemdecillion \", \"vigintillion \"]\n",
+    "\n",
+    "def digits_to_text(document):\n",
+    "    digits_to_text = []\n",
+    "    for token in document:\n",
+    "        temp = int2word(token)\n",
+    "        if type(temp) is list:\n",
+    "            digits_to_text.extend(temp)\n",
+    "        else:\n",
+    "            digits_to_text.append(temp)\n",
+    "\n",
+    "    return digits_to_text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,6 +126,42 @@
     "    _ = WordNetLemmatizer().lemmatize('test')\n",
     "except:\n",
     "    nltk.download('wordnet')\n",
+    "    \n",
+    "# Embeddings don't work well for words that occur < 5 times\n",
+    "THRESHOLD = 5\n",
+    "UNK = \"<unk>\"\n",
+    "\n",
+    "def hide_infrequent_words(document, threshold):\n",
+    "    counter = Counter(document)\n",
+    "    new_document = []\n",
+    "    \n",
+    "    for word in document:\n",
+    "        if counter[word] > threshold:\n",
+    "            new_document.append(word)\n",
+    "    \n",
+    "    return new_document\n",
+    "\n",
+    "def filter_document(document):\n",
+    "    \"\"\"Filter list of words based on some conventional methods, like removing stopwords and\n",
+    "    lemmatization\"\"\"\n",
+    "\n",
+    "    # Remove stop words\n",
+    "    stop_words = stopwords.words('english')\n",
+    "    document = list(filter(lambda x: x not in stop_words, document))\n",
+    "\n",
+    "    # [I, am, 34] -> [I, am, thirty, four]\n",
+    "    document = digits_to_text(document)\n",
+    "\n",
+    "    # Lemmatize\n",
+    "    lemmatizer = WordNetLemmatizer()\n",
+    "    document = list(map(lemmatizer.lemmatize, document))\n",
+    "\n",
+    "    return document\n",
+    "\n",
+    "def make_context_vector(context, w2i):\n",
+    "    idxs = [w2i[w] for w in context]\n",
+    "    tensor = torch.LongTensor(idxs)\n",
+    "    return autograd.Variable(tensor)\n",
     "\n",
     "class DialogDataset(Dataset):\n",
     "    \n",
@@ -49,9 +172,16 @@
     "            \n",
     "        self.img_features = np.asarray(h5py.File(image_features, 'r')['img_features'])\n",
     "        self.json_data = pd.read_json(json_data, orient='index')\n",
-    "        self.corpus = self.filter_document(self.get_words())\n",
+    "        self.corpus = filter_document(self.get_words())\n",
+    "        self.corpus = hide_infrequent_words(self.corpus)\n",
     "        self.vocab = list(set(self.corpus))\n",
+    "        \n",
+    "        # Add the UNK token to the vocab\n",
+    "        self.vocab.append(UNK)\n",
+    "        \n",
+    "        # Make w2i return idx of UNK by default\n",
     "        self.w2i = {word : i for i, word in enumerate(self.vocab)}\n",
+    "        self.w2i = defaultdict(lambda: self.w2i[UNK], self.w2i)\n",
     "        \n",
     "    # collect all the words from dialogs and \n",
     "    # captions and use them to create embedding map\n",
@@ -65,33 +195,8 @@
     "            dialog.extend(item.caption.split(' '))\n",
     "\n",
     "            words.append(dialog)\n",
-    "            \n",
+    "\n",
     "        return list(chain.from_iterable(words))\n",
-    "    \n",
-    "    def make_context_vector(self, context):\n",
-    "        idxs = [self.w2i[w] for w in context]\n",
-    "        tensor = torch.LongTensor(idxs)\n",
-    "        return autograd.Variable(tensor)\n",
-    "    \n",
-    "    def filter_document(self, document):\n",
-    "        \"\"\"Filter list of words based on some conventinal methods, like removing stopwords and\n",
-    "        lemmatization\"\"\"\n",
-    "        \n",
-    "#         # Remove stop words\n",
-    "        stop_words = stopwords.words('english')\n",
-    "        document = filter(lambda x: x not in stop_words, document)\n",
-    "        \n",
-    "        # Lemmatize\n",
-    "#         lemmatizer = WordNetLemmatizer()\n",
-    "#         document = map(lemmatizer.lemmatize, document)\n",
-    "        \n",
-    "#         # Stem\n",
-    "        stemmer = SnowballStemmer('english')\n",
-    "        document = map(stemmer.stem, document)\n",
-    "        \n",
-    "        return document\n",
-    "        \n",
-    "        \n",
     "\n",
     "    def __len__(self):\n",
     "        return len(self.json_data)\n",
@@ -102,8 +207,8 @@
     "        # Flatten dialog and add caption into 1d array\n",
     "        dialog = [word for line in item.dialog for word in line[0].split()]\n",
     "        dialog.extend(item.caption.split(' '))\n",
-    "        dialog = self.filter_document(dialog)\n",
-    "        dialog = self.make_context_vector(dialog)\n",
+    "        dialog = filter_document(dialog)\n",
+    "        dialog = make_context_vector(dialog, self.w2i)\n",
     "\n",
     "        img_ids = np.array(item.img_list)\n",
     "        img_features = [self.img_features[idx] for idx in map(lambda x: self.img2feat[str(x)], img_ids)]\n",
@@ -117,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 57,
    "metadata": {
     "scrolled": false
    },
@@ -155,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,15 +290,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 30s, sys: 2.8 s, total: 1min 33s\n",
-      "Wall time: 1min 44s\n"
+      "CPU times: user 1min 9s, sys: 4.85 s, total: 1min 14s\n",
+      "Wall time: 1min 27s\n"
      ]
     }
    ],
@@ -217,46 +322,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 / 5000\n",
+      "Epoch 1: 9.936207246780395\n",
+      "0 / 5000\n",
+      "Epoch 2: 9.565549840927124\n",
+      "0 / 5000\n",
+      "Epoch 3: 9.252888078689574\n",
+      "0 / 5000\n",
+      "Epoch 4: 9.162663965225219\n",
+      "0 / 5000\n",
+      "Epoch 5: 9.142481765747071\n"
+     ]
+    }
+   ],
+   "source": [
+    "CONTEXT_SIZE = 4\n",
+    "\n",
+    "def make_window(words, context_size, batch_size=1):\n",
+    "    #Find N words before, and two words after given word.\n",
+    "    for i in range(context_size, len(words) - context_size):\n",
+    "        for j in range(batch_size):\n",
+    "            context = words[i - context_size:i - 1] + words[i + 1:i+context_size]\n",
+    "            target = words[i]\n",
+    "            yield context, target\n",
+    "\n",
+    "def learn_embeddings(data):\n",
+    "        \n",
+    "    model = CBOW(len(data.vocab), EMBEDDING_DIM)\n",
+    "    loss_func = nn.CrossEntropyLoss()\n",
+    "    optimizer = optim.Adam(model.parameters(), lr=1e-02)\n",
+    "    \n",
+    "    for epoch in range(1, 6):\n",
+    "        \n",
+    "        total_loss = 0\n",
+    "        \n",
+    "        for i, (context, target) in enumerate(make_window(data.corpus, CONTEXT_SIZE)):\n",
+    "            \n",
+    "            inp = make_context_vector(context, data.w2i)\n",
+    "            target = Variable(torch.LongTensor([data.w2i[target]]))\n",
+    "\n",
+    "            pred = model(inp)\n",
+    "\n",
+    "            loss = loss_func(pred, target)\n",
+    "            total_loss += loss.data[0]\n",
+    "\n",
+    "            model.zero_grad()\n",
+    "\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "            \n",
+    "            if i % 500 == 0:\n",
+    "                print('{} / 5000'.format(i))\n",
+    "\n",
+    "            if i == 100: \n",
+    "                break\n",
+    "            \n",
+    "        print(\"Epoch {}: {}\".format(epoch, total_loss / 100))\n",
+    "    \n",
+    "    return model\n",
+    "\n",
+    "model = learn_embeddings(dialog_data)\n",
+    "# to_path = ['saved_models', 'embeddings', 'cbow_100_embedding_5_epochs_5000_datapoints_1e-02_LR.h5']\n",
+    "# torch.save(model.state_dict(), os.path.join(*to_path))\n",
+    "\n",
+    "giraffe = make_context_vector('giraffe', dialog_data.w2i)\n",
+    "zebra = make_context_vector('zebra', dialog_data.w2i)\n",
+    "see = make_context_vector('see', dialog_data.w2i)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Variable containing:\n",
+      " 1.0000\n",
+      "[torch.FloatTensor of size 1]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "pred = F.log_softmax(model(giraffe))\n",
+    "print(torch.sum(torch.exp(pred), 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Variable containing:\n",
-       "-2.2969 -2.3151 -2.3128 -2.3159 -2.4021 -2.3224 -2.2387 -2.3621 -2.1880 -2.2877\n",
+       "-2.3798 -2.2154 -2.3290 -2.2380 -2.2970 -2.3537 -2.3421 -2.3183 -2.3748 -2.1973\n",
        "[torch.FloatTensor of size 1x10]"
       ]
      },
-     "execution_count": 246,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cbow_model = CBOW(vocab_size, EMBEDDING_DIM)\n",
+    "from_path = ['saved_models', 'embeddings', 'cbow_100_embedding_5_epochs_5000_datapoints_1e-02_LR.h5']\n",
+    "cbow_model = model\n",
+    "cbow_model.load_state_dict(torch.load(os.path.join(*from_path)))\n",
     "max_ent = MaxEnt(cbow_model, vocab_size, IMG_SIZE)\n",
-    "max_ent(dialog_data[0][0])"
+    "max_ent(dialog_data[0][0])\n",
+    "max_ent(valid_data[0][0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 125,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Variable containing:\n",
-       " 2.3980\n",
-       "[torch.FloatTensor of size 1]"
-      ]
-     },
-     "execution_count": 251,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def validate(model, data, loss_func):\n",
     "    total_loss = 0\n",
@@ -270,7 +463,7 @@
     "        \n",
     "        if i == 20:\n",
     "            break\n",
-    "    \n",
+    "            \n",
     "    return total_loss / 20\n",
     "\n",
     "def predict(model, data):\n",
@@ -285,41 +478,39 @@
     "        if i == 20:\n",
     "            break\n",
     "    \n",
-    "    return correct\n",
-    "\n",
-    "validate(max_ent, valid_data, nn.NLLLoss())"
+    "    return correct"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1: 2.309984299182892\n",
-      "Predicted 1/20 samples correctly\n",
-      "Epoch 2: 2.292324097156525\n",
-      "Predicted 7/20 samples correctly\n",
-      "Epoch 3: 2.2774351871013643\n",
-      "Predicted 7/20 samples correctly\n",
-      "Epoch 4: 2.2647252728939056\n",
-      "Predicted 8/20 samples correctly\n",
-      "Epoch 5: 2.253857351064682\n",
-      "Predicted 9/20 samples correctly\n",
-      "Epoch 6: 2.244542367696762\n",
-      "Predicted 11/20 samples correctly\n",
-      "Epoch 7: 2.2365342650413513\n",
-      "Predicted 11/20 samples correctly\n",
-      "Epoch 8: 2.2296245720386505\n",
-      "Predicted 11/20 samples correctly\n",
-      "Epoch 9: 2.2236373114585875\n",
-      "Predicted 11/20 samples correctly\n",
-      "Epoch 10: 2.218424485683441\n",
-      "Predicted 11/20 samples correctly\n",
-      "[2.426304578781128, 2.4022343158721924, 2.38154935836792, 2.3637640476226807, 2.3484585285186768, 2.335270881652832, 2.3238911628723145, 2.314053773880005, 2.3055310249328613, 2.298130512237549]\n"
+      "Epoch 1: 2.312025718688965\n",
+      "2.3952348232269287\n",
+      "Epoch 2: 2.299572243690491\n",
+      "2.388327121734619\n",
+      "Epoch 3: 2.2882035613059997\n",
+      "2.381679058074951\n",
+      "Epoch 4: 2.277162404060364\n",
+      "2.3752832412719727\n",
+      "Epoch 5: 2.2664368081092836\n",
+      "2.3691282272338867\n",
+      "Epoch 6: 2.2560134434700014\n",
+      "2.3632020950317383\n",
+      "Epoch 7: 2.2458789324760438\n",
+      "2.3574938774108887\n",
+      "Epoch 8: 2.2360202717781066\n",
+      "2.351992130279541\n",
+      "Epoch 9: 2.2264252245426177\n",
+      "2.3466873168945312\n",
+      "Epoch 10: 2.2170820844173433\n",
+      "2.3415701389312744\n",
+      "[2.3952348232269287, 2.388327121734619, 2.381679058074951, 2.3752832412719727, 2.3691282272338867, 2.3632020950317383, 2.3574938774108887, 2.351992130279541, 2.3466873168945312, 2.3415701389312744]\n"
      ]
     }
    ],
@@ -330,7 +521,9 @@
     "max_ent = MaxEnt(cbow_model, vocab_size, IMG_SIZE)\n",
     "loss_func = nn.NLLLoss()\n",
     "optimizer = optim.Adam(max_ent.parameters(), lr=1e-05)\n",
+    "\n",
     "validation_errors = []\n",
+    "lines_for_csv = []\n",
     "\n",
     "for epoch in range(1, EPOCHS + 1):\n",
     "    total_loss = 0\n",
@@ -351,16 +544,22 @@
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "        \n",
-    "        if i == 500:\n",
+    "        if i == 100:\n",
     "            break\n",
-    "    \n",
-    "    total_loss = total_loss / 500\n",
+    "        \n",
+    "            \n",
+    "    total_loss = total_loss / 100\n",
     "    print(\"Epoch {}: {}\".format(epoch, total_loss))\n",
-    "    print(\"Predicted {}/20 samples correctly\".format(predict(max_ent, valid_data)))\n",
+    "    print(\"Correctly predicted {} / 20\".format(predict(max_ent, valid_data)))\n",
     "    \n",
     "    val = validate(max_ent, valid_data, loss_func)\n",
+    "    print(val.data[0])\n",
     "    validation_errors.append(val.data[0])\n",
-    "        \n",
+    "    \n",
+    "    lines_for_csv.append(\"{},{},{}\\n\".format(epoch, total_loss, val.data[0]))\n",
+    "    \n",
+    "# with open('cbow_preprocessed_10_epochs_1e-05_embed_100_easy.csv', 'w') as f:\n",
+    "#     f.writelines(lines_for_csv)\n",
     "    \n",
     "print(validation_errors)"
    ]
