save graph code for later reference

--- a/dataloader_cbow_graph.ipynb
+++ b/dataloader_cbow_graph.ipynb
@@ -280,75 +280,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Logging enabled in: test_top1top5-t_size_100-v_size_20-emb_100-eps_20-dt_12-15-00-05.txt\n",
-      "Epoch 1, Average Loss: 2.325274555683136\n",
-      "Predicted 3/20 top 1 samples correctly\n",
-      "Predicted 11/20 top 5 samples correctly\n",
-      "Epoch 2, Average Loss: 2.3128041434288025\n",
-      "Predicted 3/20 top 1 samples correctly\n",
-      "Predicted 13/20 top 5 samples correctly\n",
-      "Epoch 3, Average Loss: 2.301427619457245\n",
-      "Predicted 5/20 top 1 samples correctly\n",
-      "Predicted 13/20 top 5 samples correctly\n",
-      "Epoch 4, Average Loss: 2.2903720808029173\n",
-      "Predicted 6/20 top 1 samples correctly\n",
-      "Predicted 13/20 top 5 samples correctly\n",
-      "Epoch 5, Average Loss: 2.2796246647834777\n",
-      "Predicted 7/20 top 1 samples correctly\n",
-      "Predicted 13/20 top 5 samples correctly\n",
-      "Epoch 6, Average Loss: 2.269172179698944\n",
-      "Predicted 7/20 top 1 samples correctly\n",
-      "Predicted 13/20 top 5 samples correctly\n",
-      "Epoch 7, Average Loss: 2.2590017223358156\n",
-      "Predicted 7/20 top 1 samples correctly\n",
-      "Predicted 13/20 top 5 samples correctly\n",
-      "Epoch 8, Average Loss: 2.249100955724716\n",
-      "Predicted 7/20 top 1 samples correctly\n",
-      "Predicted 14/20 top 5 samples correctly\n",
-      "Epoch 9, Average Loss: 2.2394581127166746\n",
-      "Predicted 6/20 top 1 samples correctly\n",
-      "Predicted 15/20 top 5 samples correctly\n",
-      "Epoch 10, Average Loss: 2.230062087774277\n",
-      "Predicted 6/20 top 1 samples correctly\n",
-      "Predicted 14/20 top 5 samples correctly\n",
-      "Epoch 11, Average Loss: 2.2209024274349214\n",
-      "Predicted 7/20 top 1 samples correctly\n",
-      "Predicted 16/20 top 5 samples correctly\n",
-      "Epoch 12, Average Loss: 2.2119692718982695\n",
-      "Predicted 7/20 top 1 samples correctly\n",
-      "Predicted 16/20 top 5 samples correctly\n",
-      "Epoch 13, Average Loss: 2.2032532680034635\n",
-      "Predicted 7/20 top 1 samples correctly\n",
-      "Predicted 16/20 top 5 samples correctly\n",
-      "Epoch 14, Average Loss: 2.1947457134723662\n",
-      "Predicted 7/20 top 1 samples correctly\n",
-      "Predicted 16/20 top 5 samples correctly\n",
-      "Epoch 15, Average Loss: 2.186438239812851\n",
-      "Predicted 7/20 top 1 samples correctly\n",
-      "Predicted 16/20 top 5 samples correctly\n",
-      "Epoch 16, Average Loss: 2.178323094844818\n",
-      "Predicted 7/20 top 1 samples correctly\n",
-      "Predicted 16/20 top 5 samples correctly\n",
-      "Epoch 17, Average Loss: 2.170392906665802\n",
-      "Predicted 7/20 top 1 samples correctly\n",
-      "Predicted 16/20 top 5 samples correctly\n",
-      "Epoch 18, Average Loss: 2.1626405811309812\n",
-      "Predicted 7/20 top 1 samples correctly\n",
-      "Predicted 16/20 top 5 samples correctly\n",
-      "Epoch 19, Average Loss: 2.155059508085251\n",
-      "Predicted 7/20 top 1 samples correctly\n",
-      "Predicted 16/20 top 5 samples correctly\n",
-      "Epoch 20, Average Loss: 2.147643474340439\n",
-      "Predicted 7/20 top 1 samples correctly\n",
-      "Predicted 16/20 top 5 samples correctly\n",
-      "Done, validation errors:  [2.4174764156341553, 2.4102182388305664, 2.4032211303710938, 2.3964765071868896, 2.3899731636047363, 2.383699417114258, 2.3776447772979736, 2.3717994689941406, 2.3661532402038574, 2.360696792602539, 2.3554224967956543, 2.3503217697143555, 2.3453879356384277, 2.3406128883361816, 2.335991621017456, 2.331517219543457, 2.327183246612549, 2.3229854106903076, 2.318917989730835, 2.314976692199707]\n"
+     "ename": "NameError",
+     "evalue": "name 'CBOW' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-3eac98eb0417>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mEMBEDDING_DIM\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m100\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mcbow_model\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mCBOW\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvocab_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mEMBEDDING_DIM\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mmax_ent\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mMaxEnt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcbow_model\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvocab_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mIMG_SIZE\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mloss_func\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mNLLLoss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'CBOW' is not defined"
      ]
     }
    ],
@@ -514,7 +457,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.5.2rc1"
   }
  },
  "nbformat": 4,
