dataloader_cbow ready for full training session

--- a/dataloader_cbow.ipynb
+++ b/dataloader_cbow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,18 +92,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "SAMPLE_EASY = ['Data', 'sample_easy.json']\n",
     "TRAIN_EASY = ['Data', 'Easy', 'IR_train_easy.json']\n",
+    "EASY_1000 = ['Data', 'Easy', 'IR_train_easy_1000.json']\n",
     "VALID_EASY = ['Data', 'Easy', 'IR_val_easy.json']\n",
     "IMG_FEATURES = ['Data', 'Features', 'IR_image_features.h5']\n",
     "INDEX_MAP = ['Data', 'Features', 'IR_img_features2id.json']\n",
     "\n",
     "IMG_SIZE = 2048\n",
-    "EMBEDDING_DIM = 5\n",
+    "EMBEDDING_DIM = 50\n",
     "\n",
     "torch.manual_seed(1)\n",
     "# dialog_data = DialogDataset(os.path.join(*SAMPLE_EASY), os.path.join(*IMG_FEATURES), os.path.join(*INDEX_MAP))\n",
@@ -117,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "scrolled": false
    },
@@ -130,7 +139,7 @@
     "\n",
     "class CBOW(torch.nn.Module):\n",
     "\n",
-    "    def __init__(self, vocab_size, embedding_dim):\n",
+    "    def __init__(self, vocab_size, embedding_dim, output_dim):\n",
     "        super(CBOW, self).__init__()\n",
     "\n",
     "        #out: 1 x emdedding_dim\n",
@@ -139,8 +148,8 @@
     "        self.activation_function1 = nn.ReLU()\n",
     "        \n",
     "        #out: 1 x vocab_size\n",
-    "        self.linear2 = nn.Linear(128, vocab_size)\n",
-    "        self.activation_function2 = nn.Sigmoid()\n",
+    "        self.linear2 = nn.Linear(128, output_dim)\n",
+    "        self.activation_function2 = nn.ReLU()\n",
     "        \n",
     "\n",
     "    def forward(self, inputs):\n",
@@ -155,17 +164,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "class MaxEnt(torch.nn.Module):\n",
     "    \n",
-    "    def __init__(self, text_module, vocab_size, img_size):\n",
+    "    def __init__(self, text_module, text_dim, img_size):\n",
     "        super(MaxEnt, self).__init__()\n",
     "\n",
     "        self.text_module = text_module\n",
-    "        self.linear = nn.Linear(vocab_size + img_size, 1)\n",
+    "        self.linear = nn.Linear(text_dim + img_size, 1)\n",
     "        self.softmax = nn.LogSoftmax()\n",
     "        \n",
     "    def prepare (self, dialog, imgFeatures):\n",
@@ -192,12 +201,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "no no\n"
+     ]
+    }
+   ],
    "source": [
-    "cbow_model = CBOW(vocab_size, EMBEDDING_DIM)\n",
-    "model = MaxEnt(cbow_model, vocab_size, IMG_SIZE)\n",
+    "TEXT_DIM = 512\n",
+    "\n",
+    "cbow_model = CBOW(vocab_size, EMBEDDING_DIM, TEXT_DIM)\n",
+    "model = MaxEnt(cbow_model, TEXT_DIM, IMG_SIZE)\n",
     "\n",
     "if torch.cuda.is_available():\n",
     "    print(\"ya ya\")\n",
@@ -214,9 +233,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.705222536958754"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def validate(model, data, loss_func):\n",
     "    total_loss = 0\n",
@@ -254,23 +284,19 @@
     "        top_5 = heapq.nlargest(5, range(len(pred)), pred.__getitem__)\n",
     "        if target.data[0] in top_5:\n",
     "            correct_top5 += 1\n",
-    "        \n",
-    "        if i == 20:\n",
-    "            break\n",
     "    \n",
-    "    return correct_top1, correct_top5\n",
+    "    return correct_top1 / len(data), correct_top5 / len(data)\n",
     "\n",
-    "# validate(model, valid_data[:100], nn.NLLLoss())\n",
-    "predict(model, valid_data[:20])"
+    "validate(model, valid_data[:100], nn.NLLLoss())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def log_to_console(i, n_epochs, batch_size, batch_per_epoch, errors, start_time):\n",
+    "def log_to_console(i, n_epochs, batch_size, batch_per_epoch, error, start_time):\n",
     "    avgProcessingSpeed = (i*batch_size) / (time.time() - start_time)\n",
     "    percentOfEpc = (i / batch_per_epoch) * 100\n",
     "    print(\"{:.0f}s:\\t epoch: {}\\t batch:{} ({:.1f}%) \\t training error: {:.6f}\\t speed: {:.1f} dialogs/s\"\n",
@@ -278,7 +304,7 @@
     "                  n_epochs, \n",
     "                  i, \n",
     "                  percentOfEpc, \n",
-    "                  np.mean(errors[-100:]), \n",
+    "                  error, \n",
     "                  avgProcessingSpeed))\n",
     "    \n",
     "def init_stats_log(label, training_portion, validation_portion, embeddings_dim, epochs, batch_count):\n",
@@ -302,13 +328,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "we have: 40000 dialogs, batch size of 30 with 40 as remainder to offset batches each epoch\n",
+      "Logging enabled in: test_top1_top2-t_size_40000-v_size_5000-emb_50-eps_100-dt_12-15-22-42-batch_30.txt\n",
+      "10s:\t epoch: 0\t batch:57 (4.3%) \t training error: 15.043881\t speed: 170.1 dialogs/s\n",
+      "20s:\t epoch: 0\t batch:115 (8.6%) \t training error: 15.325217\t speed: 171.9 dialogs/s\n",
+      "30s:\t epoch: 0\t batch:181 (13.6%) \t training error: 15.229888\t speed: 180.4 dialogs/s\n",
+      "40s:\t epoch: 0\t batch:244 (18.3%) \t training error: 15.207059\t speed: 181.1 dialogs/s\n",
+      "51s:\t epoch: 0\t batch:306 (23.0%) \t training error: 15.266142\t speed: 181.8 dialogs/s\n",
+      "61s:\t epoch: 0\t batch:368 (27.6%) \t training error: 15.273058\t speed: 182.4 dialogs/s\n",
+      "71s:\t epoch: 0\t batch:429 (32.2%) \t training error: 15.153103\t speed: 182.4 dialogs/s\n",
+      "81s:\t epoch: 0\t batch:489 (36.7%) \t training error: 15.206864\t speed: 182.0 dialogs/s\n",
+      "91s:\t epoch: 0\t batch:551 (41.4%) \t training error: 15.178892\t speed: 182.4 dialogs/s\n",
+      "101s:\t epoch: 0\t batch:610 (45.8%) \t training error: 15.202682\t speed: 181.8 dialogs/s\n",
+      "111s:\t epoch: 0\t batch:667 (50.1%) \t training error: 15.276329\t speed: 180.7 dialogs/s\n",
+      "121s:\t epoch: 0\t batch:723 (54.3%) \t training error: 15.289291\t speed: 179.6 dialogs/s\n",
+      "131s:\t epoch: 0\t batch:781 (58.6%) \t training error: 15.303136\t speed: 179.1 dialogs/s\n",
+      "141s:\t epoch: 0\t batch:840 (63.1%) \t training error: 15.328660\t speed: 178.9 dialogs/s\n",
+      "151s:\t epoch: 0\t batch:900 (67.6%) \t training error: 15.384513\t speed: 178.9 dialogs/s\n",
+      "161s:\t epoch: 0\t batch:960 (72.1%) \t training error: 15.346280\t speed: 178.8 dialogs/s\n",
+      "171s:\t epoch: 0\t batch:1021 (76.7%) \t training error: 15.311938\t speed: 178.9 dialogs/s\n",
+      "181s:\t epoch: 0\t batch:1078 (80.9%) \t training error: 15.294936\t speed: 178.4 dialogs/s\n",
+      "191s:\t epoch: 0\t batch:1138 (85.4%) \t training error: 15.292888\t speed: 178.5 dialogs/s\n",
+      "201s:\t epoch: 0\t batch:1182 (88.7%) \t training error: 15.309942\t speed: 176.0 dialogs/s\n",
+      "212s:\t epoch: 0\t batch:1229 (92.3%) \t training error: 15.279548\t speed: 174.3 dialogs/s\n",
+      "222s:\t epoch: 0\t batch:1277 (95.9%) \t training error: 15.245029\t speed: 172.9 dialogs/s\n",
+      "232s:\t epoch: 0\t batch:1323 (99.3%) \t training error: 15.192968\t speed: 171.1 dialogs/s\n",
+      "15.176347052370822\n",
+      "320.5s:\t Finished epoch. Calculating test error..\n",
+      "320.5s:\t test error: 4.255885\n",
+      "saved\t maxent_30batch_2epc.pt\n"
+     ]
+    }
+   ],
    "source": [
     "batchSize = 30\n",
-    "numEpochs = 5\n",
-    "learningRate = 1e-1\n",
+    "numEpochs = 100\n",
+    "learningRate = 1e-5\n",
     "criterion = nn.NLLLoss()\n",
     "optimizer = optim.Adam(model.parameters(), lr=learningRate)\n",
     "\n",
@@ -323,7 +385,7 @@
     "print(\"we have: {} dialogs, batch size of {} with {} as remainder to offset batches each epoch\".format(sampleCount, batchSize, remainderCount))\n",
     "offset = 0\n",
     "\n",
-    "logging = False\n",
+    "logging = True\n",
     "\n",
     "training_portion = len(dialog_data)\n",
     "validation_portion = len(valid_data)\n",
@@ -374,15 +436,16 @@
     "        optimizer.step()\n",
     "        \n",
     "        if time.time()  - lastPrintTime > 10:\n",
-    "            log_to_console(i, t, batchSize, batchCountPerEpc, training_errors, startTime)\n",
+    "            log_to_console(i, t, batchSize, batchCountPerEpc, total_loss / i, startTime)\n",
     "            lastPrintTime = time.time()\n",
     "    \n",
-    "    avg_loss = total_loss / training_portion\n",
+    "    avg_loss = total_loss / batchCountPerEpc\n",
     "    top_1_score, top_5_score = predict(model, valid_data)\n",
     "    validation_error = validate(model, valid_data, criterion)\n",
     "    \n",
+    "    print(avg_loss)\n",
     "    if logging == True:\n",
-    "        stats_log.write(\"{}|{}|{}|{}|{}|{}\\n\".format(epoch, avg_loss, total_loss, validation_error, top_1_score, top_5_score))\n",
+    "        stats_log.write(\"{}|{}|{}|{}|{}|{}\\n\".format(t, avg_loss, total_loss, validation_error, top_1_score, top_5_score))\n",
     "            \n",
     "    epochsTrained += 1\n",
     "    offset = (offset + 1) % remainderCount\n",
@@ -392,6 +455,8 @@
     "    fileName = \"maxent_{}batch_{}epc.pt\".format(batchSize, epochsTrained)\n",
     "    torch.save(model.state_dict(), fileName)\n",
     "    print(\"saved\\t\", fileName)\n",
+    "    \n",
+    "    break\n",
     "\n",
     "if logging == True:\n",
     "    stats_log.close()"
@@ -399,11 +464,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: '0.1246'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-59-0ff759f891a7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     39\u001b[0m     \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     40\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 41\u001b[0;31m \u001b[0mdraw_graph\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-59-0ff759f891a7>\u001b[0m in \u001b[0;36mdraw_graph\u001b[0;34m(filename)\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m     \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msubplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 28\u001b[0;31m     \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mepochs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcorrect_top_1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mint8\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'-'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     29\u001b[0m     \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mylabel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Correct\\ntop 1'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m     \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mxlabel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Epochs'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: '0.1246'"
+     ]
+    }
+   ],
    "source": [
-    "def draw_graph(filename=trained_stats_file):\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "def draw_graph(filename):\n",
     "    \n",
     "    \n",
     "    # Read file and data\n",
@@ -441,8 +521,15 @@
     "    \n",
     "    plt.show()\n",
     "\n",
-    "draw_graph()"
+    "draw_graph(filename)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
