also remove punctuation

--- a/cbow_preprocessing.ipynb
+++ b/cbow_preprocessing.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,6 +105,7 @@
     "from pathlib import Path\n",
     "import time\n",
     "\n",
+    "\n",
     "import sys\n",
     "import pprint\n",
     "from collections import Counter,defaultdict\n",
@@ -113,6 +114,7 @@
     "import nltk\n",
     "from nltk.corpus import stopwords\n",
     "from nltk.stem.wordnet import WordNetLemmatizer\n",
+    "import string\n",
     "\n",
     "# TODO: find scientific reference that also claims Snowball is better\n",
     "# alternatively: http://www.nltk.org/howto/stem.html claims this already.\n",
@@ -148,9 +150,11 @@
     "    lemmatization\"\"\"\n",
     "\n",
     "    # Remove stop words\n",
-    "    stop_words = stopwords.words('english')\n",
-    "    punctuation = [',']\n",
-    "    document = list(filter(lambda x: x not in stop_words, document))\n",
+    "    stop_words = set(stopwords.words('english'))\n",
+    "    print(stop_words)\n",
+    "    punctuation = set(string.punctuation)\n",
+    "    remove = stop_words.update(punctuation)\n",
+    "    document = list(filter(lambda x: x not in remove, document))\n",
     "\n",
     "    # [I, am, 34] -> [I, am, thirty, four]\n",
     "    document = digits_to_text(document)\n",
@@ -237,17 +241,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "SAMPLE_EASY = ['Data', 'sample_easy.json']\n",
     "TRAIN_EASY = ['Data', 'Easy', 'IR_train_easy.json']\n",
